--- a/app/views/fields/carrierwave/_preview.html.erb
+++ b/app/views/fields/carrierwave/_preview.html.erb
@@ -1,3 +1,3 @@
 <% if field.image %>
-  <p><%= image_tag field.url(field.image), alt: field.filename %></p>
+  <p><%= image_tag field.url(field.image), alt: field.basename %></p>
 <% end %>
