--- a/app/views/fields/carrierwave/_preview.html.erb
+++ b/app/views/fields/carrierwave/_preview.html.erb
@@ -1,3 +1,1 @@
-<% if field.image %>
-  <p><%= image_tag field.url(field.image), alt: field.basename %></p>
-<% end %>
+<%= link_to image_tag(file.url(field.image), alt: file.filename), file.url, target: '_blank' %>
