--- a/app/views/fields/carrierwave/_file.html.erb
+++ b/app/views/fields/carrierwave/_file.html.erb
@@ -1,1 +1,5 @@
-<%= link_to (file.filename || file.path).split('/').last, file.url, target: '_blank' %>
+<% if filepath = file.filename || file.path %>
+  <%= link_to filepath.split('/').last, file.url, target: '_blank' %>
+<% else %>
+  -
+<% end %>
