add text_field & check_box for remote_url & remove
* add `text_field` for remote_FIELD_url
* add `check_box` for remove_FIELD

Sorry, don't know any about administrate styling

--- a/app/views/fields/carrierwave/_form.html.erb
+++ b/app/views/fields/carrierwave/_form.html.erb
@@ -20,4 +20,7 @@ attachment(s) for this attribute
   <%= f.file_field field.attribute, multiple: field.multiple? %>
   <br />
   <%= render 'fields/carrierwave/show', field: field %>
+
+  <%= f.text_field "remote_#{field.attribute}_url" if field.remote_url? %>
+  <%= f.check_box "remove_#{field.attribute}" if field.remove? %>
 </div>
