--- a/app/views/fields/carrierwave/_form.html.erb
+++ b/app/views/fields/carrierwave/_form.html.erb
@@ -18,9 +18,11 @@ attachment(s) for this attribute
 </div>
 <div class="field-unit__field">
   <%= f.file_field field.attribute, multiple: field.multiple? %>
+  <%= f.text_field "remote_#{field.attribute}_url", placeholder: "remote url" if field.remote_url? %>
   <br />
   <%= render 'fields/carrierwave/show', field: field %>
 
-  <%= f.text_field "remote_#{field.attribute}_url" if field.remote_url? %>
-  <%= f.check_box "remove_#{field.attribute}" if field.remove? %>
+  <% if field.remove? %>
+    <label><%= f.check_box "remove_#{field.attribute}" %> <%= "Remove #{field.attribute}" %></label>
+  <% end %>
 </div>
