--- a/app/views/fields/carrierwave/_form.html.erb
+++ b/app/views/fields/carrierwave/_form.html.erb
@@ -18,6 +18,11 @@ attachment(s) for this attribute
 </div>
 <div class="field-unit__field">
   <%= f.file_field field.attribute, multiple: field.multiple? %>
+  <%= f.text_field "remote_#{field.attribute}_url", placeholder: "Remote URL" if field.remote_url? %>
   <br />
   <%= render 'fields/carrierwave/show', field: field %>
+
+  <%= f.label "remove_#{field.attribute}" do %>
+    <%= f.check_box "remove_#{field.attribute}" %> Remove <%= field.attribute %>
+  <% end if field.remove? %>
 </div>
