--- a/app/views/fields/carrierwave/_index.html.erb
+++ b/app/views/fields/carrierwave/_index.html.erb
@@ -14,7 +14,7 @@ opens in a new window/tab, or the total number of attached files
 <% if field.multiple? %>
   <%= pluralize(field.files.size, field.attribute.to_s.humanize.downcase) %>
 <% elsif field.file.present? %>
-  <% if field.image_on_index %>
+  <% if field.image_on_index? %>
     <%= render 'fields/carrierwave/preview', file: field.file, field: field %>
   <% else %>
     <%= link_to 'View', field.file.url, title: field.file.filename, target: '_blank' %>
