--- a/app/views/fields/carrierwave/_show.html.erb
+++ b/app/views/fields/carrierwave/_show.html.erb
@@ -22,9 +22,7 @@ for this attribute
     <span>No file(s) uploaded yet</span>
   <% end %>
 <% else %>
-  <% if field.show_preview? %>
-    <%= render 'fields/carrierwave/preview', file: field.file, field: field %>
-  <% elsif field.show_file? %>
+  <% if field.show_file? %>
     <%= render 'fields/carrierwave/file', file: field.file %>
   <% else %>
       -
